--- a/scss/components/_media.scss
+++ b/scss/components/_media.scss
@@ -65,11 +65,13 @@
   }
   .pie1 {
     img {
-      width: 130px;
+      width: 250px;
+      padding-bottom: 20px;
     }
   }
   .pie3 {
     font-size: 12px;
+    flex-direction: column;
   }
 }
 @mixin espacio40 {
