--- a/css/style.css
+++ b/css/style.css
@@ -236,7 +236,7 @@ footer {
   }
   .pie3 {
     font-size: 12px;
-    flex-direction: column;
+    flex-wrap: wrap;
   }
   .marcas1 {
     padding-left: 0px;
