--- a/css/style.css
+++ b/css/style.css
@@ -136,6 +136,20 @@ footer {
   height: 100px;
 }
 
+.flecha {
+  position: fixed;
+  width: 55px;
+  opacity: 0.5;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+  list-style: none;
+  display: flex;
+  gap: 2em;
+  bottom: 20px;
+  right: 20px;
+}
+
 .pie1 {
   display: flex;
   flex-direction: column;
