--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -73,3 +73,16 @@
     }
   }
 }
+.flecha {
+  position: fixed;
+  width: 55px;
+  opacity: 0.5;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+  list-style: none;
+  display: flex;
+  gap: 2em;
+  bottom: 20px;
+  right: 20px;
+}
