--- a/css/style.css
+++ b/css/style.css
@@ -140,14 +140,11 @@ footer {
   position: fixed;
   width: 55px;
   opacity: 0.5;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
-  list-style: none;
-  display: flex;
-  gap: 2em;
   bottom: 20px;
   right: 20px;
+}
+.flecha html {
+  scroll-behavior: smooth;
 }
 
 .pie1 {
