--- a/scss/pages/_index.scss
+++ b/scss/pages/_index.scss
@@ -77,12 +77,9 @@
   position: fixed;
   width: 55px;
   opacity: 0.5;
-  margin-top: 0;
-  margin-bottom: 0;
-  padding-left: 0;
-  list-style: none;
-  display: flex;
-  gap: 2em;
   bottom: 20px;
   right: 20px;
+  html {
+    scroll-behavior: smooth;
+  }
 }
