--- a/scss/utils/_media.scss
+++ b/scss/utils/_media.scss
@@ -151,6 +151,11 @@
   }
   .localidades {
     margin-right: 0px;
+    padding-left: 10px;
+    padding-right: 10px;
+    h4{
+      font-size: 0.7rem;
+    }
   }
   .pie3 {
     font-size: 12px;
