--- a/scss/pages/_servicios.scss
+++ b/scss/pages/_servicios.scss
@@ -48,6 +48,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 0.2rem;
+  padding-bottom: 40px;
   h4 {
     border: 1px solid white;
     margin: 2px;
