--- a/scss/utils/_media.scss
+++ b/scss/utils/_media.scss
@@ -153,6 +153,7 @@
     margin-right: 0px;
     padding-left: 10px;
     padding-right: 10px;
+    padding-bottom: 25px;
     h4{
       font-size: 1rem;
     }
