--- a/scss/pages/_servicios.scss
+++ b/scss/pages/_servicios.scss
@@ -63,6 +63,9 @@
   overflow: hidden;
   color: $color-principal;
   text-align: center;
+  span {
+    font-size: 1.5rem;
+  }
 
   iframe {
     padding-top: 50px;
