--- a/scss/utils/_media.scss
+++ b/scss/utils/_media.scss
@@ -64,7 +64,7 @@
   }
   .pie1 {
     img {
-      width: 250px;
+      width: 200px;
       padding-bottom: 20px;
     }
   }
@@ -143,6 +143,11 @@
   .listservicios {
     margin-right: 0px;
   }
+  .listservicios2 {
+    span {
+      font-size: 0.9rem;
+    }
+  }
   .tituloservicios {
     text-align: center;
   }
@@ -153,8 +158,7 @@
     margin-right: 0px;
     padding-left: 10px;
     padding-right: 10px;
-    padding-bottom: 25px;
-    h4{
+    h4 {
       font-size: 1rem;
     }
   }
