--- a/scss/pages/_servicios.scss
+++ b/scss/pages/_servicios.scss
@@ -76,3 +76,11 @@
     height: 100%;
   }
 }
+.tuhermana{
+  font-weight: bold;
+  font-size: 30px;
+  text-align: center;
+  margin: 0;
+  margin-bottom: 20px;
+  letter-spacing: 3px;
+}
